--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,3 +2,17 @@
 ---
 
 @string{aps = {American Physical Society,}}
+
+@article{goncalves_deephp_2022,
+	title = {{DeepHP}: {A} {New} {Gastric} {Mucosa} {Histopathology} {Dataset} for {Helicobacter} pylori {Infection} {Diagnosis}},
+	volume = {23},
+	copyright = {All rights reserved},
+	issn = {1422-0067},
+	url = {https://www.mdpi.com/1422-0067/23/23/14581},
+	doi = {10.3390/ijms232314581},
+	abstract = {Emerging deep learning-based applications in precision medicine include computational histopathological analysis. However, there is a lack of the required training image datasets to generate classification and detection models. This phenomenon occurs mainly due to human factors that make it difficult to obtain well-annotated data. The present study provides a curated public collection of histopathological images (DeepHP) and a convolutional neural network model for diagnosing gastritis. Images from gastric biopsy histopathological exams were used to investigate the performance of the proposed model in detecting gastric mucosa with Helicobacter pylori infection. The DeepHP database comprises 394,926 histopathological images, of which 111 K were labeled as Helicobacter pylori positive and 283 K were Helicobacter pylori negative. We investigated the classification performance of three Convolutional Neural Network architectures. The models were tested and validated with two distinct image sets of 15\% (59K patches) chosen randomly. The VGG16 architecture showed the best results with an Area Under the Curve of 0.998\%. The results showed that CNN could be used to classify histopathological images from gastric mucosa with marked precision. Our model evidenced high potential and application in the computational pathology field.},
+	number = {23},
+	journal = {International Journal of Molecular Sciences},
+	author = {Gonçalves, Wanderson Gonçalves e and Santos, Marcelo Henrique Paula dos and Brito, Leonardo Miranda and Palheta, Helber Gonzales Almeida and Lobato, Fábio Manoel França and Demachki, Samia and Ribeiro-dos-Santos, Ândrea and Araújo, Gilderlanio Santana de},
+	year = {2022},
+}
