--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,17 +24,16 @@
 
 @inproceedings{de2019social,
   title={Social network advertising classification based on content categories},
-  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, F{\'a}bio},
+  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, Fabio Manoel Franca},
   booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
   pages={396--404},
   year={2019},
   organization={Springer}
 }
 
-
 @inproceedings{de2019social,
   title={Social network advertising classification based on content categories},
-  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, F{\'a}bio},
+  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato,Fabio},
   booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
   pages={396--404},
   year={2019},
