--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,38 +22,21 @@
   organization={Springer}
 }
 
-@inproceedings{de2019social,
-  title={Social network advertising classification based on content categories},
-  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, Fabio Manoel Franca},
-  booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
-  pages={396--404},
-  year={2019},
-  organization={Springer}
-}
-
-@inproceedings{de2019social,
-  title={Social network advertising classification based on content categories},
-  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato,Fabio},
-  booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
-  pages={396--404},
-  year={2019},
-  organization={Springer}
-}
-
-@article{lobato2017multimodal,
-  title={Multimodal low-invasive system for sleep quality monitoring and improvement},
-  author={Lobato, F{\'a}bio Manoel Franca and de Resende, Damares Crystina Oliveira and do Nascimento, Roberto Pereira and Siqueira, Andr{\'e} Luis Carvalho and Jacob, Antonio Fernando Lavareda and de Santana, {\'A}damo Lima},
-  journal={Beyond the Internet of Things: Everything Interconnected},
-  pages={223--242},
-  year={2017},
-  publisher={Springer}
-}
-
 @inproceedings{cirqueira2017performance,
   title={Performance evaluation of sentiment analysis methods for Brazilian Portuguese},
   author={Cirqueira, Douglas and Jacob, Antonio and Lobato, F{\'a}bio and de Santana, Adamo Lima and Pinheiro, M{\'a}rcia},
   booktitle={Business Information Systems Workshops: BIS 2016 International Workshops, Leipzig, Germany, July 6-8, 2016, Revised Papers 19},
   pages={245--251},
   year={2017},
+  organization={Springer}
+}
+
+
+@inproceedings{de2019social,
+  title={Social network advertising classification based on content categories},
+  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, F{\'a}bio},
+  booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
+  pages={396--404},
+  year={2019},
   organization={Springer}
 }
