--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-
 @inproceedings{de2022gaining,
   title={Gaining Insights on Student Satisfaction by Applying Social CRM Techniques for Higher Education Institutions},
   author={de Sousa, Gustavo Nogueira and Lobato, Fabio and Viana, Julio and Reinhold, Olaf},
@@ -20,4 +19,40 @@
   pages={161--173},
   year={2022},
   organization={Springer}
+}
+
+@inproceedings{junior2020social,
+  title={Social CRM Tools: A Systematic Mapping Study},
+  author={Junior, Jorge LF Silva and Viana, Julio and Reinhold, Olaf and Jacob Jr, Ant{\^o}nio FL and Alt, Rainer and Lobato, F{\'a}bio MF},
+  booktitle={Business Information Systems Workshops: BIS 2020 International Workshops, Colorado Springs, CO, USA, June 8--10, 2020, Revised Selected Papers},
+  pages={250--261},
+  year={2020},
+  organization={Springer}
+}
+
+@inproceedings{lobato2020social,
+  title={Social CRM: a literature review based on keywords network analysis},
+  author={Lobato, F{\'a}bio MF and Silva Junior, Jorge LF and Jacob Jr., Ant{\^o}nio and Lisboa Cardoso, Diego},
+  booktitle={Business Information Systems Workshops: BIS 2020 International Workshops, Colorado Springs, CO, USA, June 8--10, 2020, Revised Selected Papers 23},
+  pages={237--249},
+  year={2020},
+  organization={Springer}
+}
+
+@inproceedings{de2019social,
+  title={Social network advertising classification based on content categories},
+  author={de Sousa, Gustavo Nogueira and Almeida, Gustavo R and Lobato, F{\'a}bio},
+  booktitle={Business Information Systems Workshops: BIS 2019 International Workshops, Seville, Spain, June 26--28, 2019, Revised Papers 22},
+  pages={396--404},
+  year={2019},
+  organization={Springer}
+}
+
+@article{lobato2017multimodal,
+  title={Multimodal low-invasive system for sleep quality monitoring and improvement},
+  author={Lobato, F{\'a}bio Manoel Franca and de Resende, Damares Crystina Oliveira and do Nascimento, Roberto Pereira and Siqueira, Andr{\'e} Luis Carvalho and Jacob, Antonio Fernando Lavareda and de Santana, {\'A}damo Lima},
+  journal={Beyond the Internet of Things: Everything Interconnected},
+  pages={223--242},
+  year={2017},
+  publisher={Springer}
 }
