--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,3 +56,176 @@
   year={2017},
   publisher={Springer}
 }
+
+@inproceedings{cirqueira2017performance,
+  title={Performance evaluation of sentiment analysis methods for Brazilian Portuguese},
+  author={Cirqueira, Douglas and Jacob, Antonio and Lobato, F{\'a}bio and de Santana, Adamo Lima and Pinheiro, M{\'a}rcia},
+  booktitle={Business Information Systems Workshops: BIS 2016 International Workshops, Leipzig, Germany, July 6-8, 2016, Revised Papers 19},
+  pages={245--251},
+  year={2017},
+  organization={Springer}
+}
+
+//CONFERENCIAS
+
+@article{domingos2022evoluindo,
+  title={Evoluindo Redes Neurais Convolucionais na Detec{\c{c}}{\~a}o de Emo{\c{c}}{\~o}es Usando Micro AGs},
+  author={Domingos, Diogenes Ademir and Cortes, Omar Andres Carmona and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Anais do Computer on the Beach},
+  volume={13},
+  pages={266--273},
+  year={2022}
+}
+
+@inproceedings{marinato2022classificaccao,
+  title={Classifica{\c{c}}ao Autom{\'a}tica de Peti{\c{c}}oes Iniciais Usando Classificadores Combinados},
+  author={Marinato, Matheus Serrao and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF and Cortes, Omar AC},
+  booktitle={Anais do XVI Brazilian e-Science Workshop},
+  pages={89--96},
+  year={2022},
+  organization={SBC}
+}
+
+@inproceedings{costa2022feminismo,
+  title={Feminismo e Redes Sociais Online: uma An{\'a}lise de Tweets sobre o Dia Internacional da Mulher},
+  author={Costa, Geandreson de S and Couto, Danielle CC and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais do XI Brazilian Workshop on Social Network Analysis and Mining},
+  pages={169--180},
+  year={2022},
+  organization={SBC}
+}
+
+@article{rodrigues2021analise,
+  title={An{\'a}lise de discursos em not{\'\i}cias sobre homofobia, racismo e sexismo em coment{\'a}rios de portais brasileiros de not{\'\i}cias},
+  author={Rodrigues, Lucas and Junior, Antonio Jacob and Lobato, F{\'a}bio},
+  journal={Anais do Computer on the Beach},
+  volume={12},
+  pages={467--474},
+  year={2021}
+}
+
+@inproceedings{rodrigues2021desenvolvimento,
+  title={Desenvolvimento de um conjunto de dados com coment{\'a}rios extra{\'\i}dos da plataforma Twitch sobre o jogo League of Legends},
+  author={Rodrigues, Lucas DF and Junior, Luiz CCL and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais do X Brazilian Workshop on Social Network Analysis and Mining},
+  pages={91--102},
+  year={2021},
+  organization={SBC}
+}
+
+@inproceedings{lobato2021brasnam,
+  title={BraSNAM em perspectiva: uma an{\'a}lise da sua trajet{\'o}ria at{\'e} os 10 anos de exist{\^e}ncia},
+  author={Lobato, F{\'a}bio MF and de Sousa, Gleyce C and Jacob Jr, Antonio FL},
+  booktitle={Anais do X Brazilian Workshop on Social Network Analysis and Mining},
+  pages={217--228},
+  year={2021},
+  organization={SBC}
+}
+
+@inproceedings{junior2019abordagem,
+  title={Uma abordagem baseada em letras para a descoberta de conhecimento da m{\'u}sica brasileira: o sertanejo como um estudo de caso},
+  author={Junior, Jorge Silva and Rossi, Rafael and Lobato, Fabio},
+  booktitle={Anais do XVI Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={949--960},
+  year={2019},
+  organization={SBC}
+}
+
+@article{junior2020ferramentas,
+  title={Ferramentas para an{\'a}lise de m{\'\i}dias sociais: Um levantamento sistem{\'a}tico},
+  author={J{\'u}nior, Emanuel Gilvan Souza Lima and de Sousa, Gustavo Nogueira and Junior, Antonio Fernando Lavareda Jacob and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Anais do Computer on the Beach},
+  volume={11},
+  number={1},
+  pages={389--396},
+  year={2020}
+}
+
+@article{junior2020analisando,
+  title={Analisando Tweets Relacionados a Defici{\^e}ncias: uma Abordagem Baseada em Classifica{\c{c}}{\~a}o},
+  author={Junior, Ademir Bas{\'e}gio and Rodrigues, Lucas Darlindo Freitas and Junior, Antonio Fernando Lavareda Jacob and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Anais do Computer on the Beach},
+  volume={11},
+  number={1},
+  pages={366--373},
+  year={2020}
+}
+
+@inproceedings{rodrigues2019noticias,
+  title={Not{\'\i}cias relacionadas a pessoas com defici{\^e}ncia: uma an{\'a}lise do conte{\'u}do gerado pelos usu{\'a}rios em postagens de m{\'\i}dias sociais},
+  author={Rodrigues, Lucas and Junior, Ademir B and Lobato, Fabio},
+  booktitle={Anais do XVI Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={811--822},
+  year={2019},
+  organization={SBC}
+}
+
+@inproceedings{almeida2020fontes,
+  title={Fontes de dados gerados por usu{\'a}rios: quais plataformas considerar?},
+  author={Almeida, Gustavo RT and Guimaraes, Isabelle and Jacob Jr, Antonio FL and Lobato, F{\'a}bio MF},
+  booktitle={Anais do IX Brazilian Workshop on Social Network Analysis and Mining},
+  pages={25--36},
+  year={2020},
+  organization={SBC}
+}
+
+@inproceedings{de2020analise,
+  title={An{\'a}lise comparativa das principais plataformas de reclama{\c{c}} oes online: implica{\c{c}} oes para an{\'a}lise de m{\i}dia social em neg{\'o}cios},
+  author={de Sousa, Gustavo Nogueira and Guimaraes, Isabelle and Jacob Jr, Antonio FL and Lobato, F{\'a}bio MF and Lu{\i}s--Maranhao--Brasil, Sao and Santar{\'e}m--PA--Brasil, Oeste do Par{\'a} UFOPA--},
+  booktitle={Anais do IX Brazilian Workshop on Social Network Analysis and Mining},
+  pages={154--165},
+  year={2020},
+  organization={SBC}
+}
+
+@inproceedings{fernandes2020extensive,
+  title={An extensive analysis of online restaurant reviews: a case study of the Amazonian Culinary Tourism},
+  author={Fernandes, Luiz Carlos and Silva, Jorge and Jacob, Antonio and Lobato, F{\'a}bio},
+  booktitle={2020 15th Conference on Computer Science and Information Systems (FedCSIS)},
+  pages={81--84},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{junior2020olhar,
+  title={Um olhar sobre turismo gastron{\^o}mico: Um caso no TripAdvisor},
+  author={Junior, Luiz F and Junior, Jorge Silva and Lobato, F{\'a}bio},
+  booktitle={Anais do XVII Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={519--530},
+  year={2020},
+  organization={SBC}
+}
+
+@article{cirqueira2020explainable,
+  title={Explainable sentiment analysis application for social media crisis management in retail},
+  author={Cirqueira, Douglas and Almeida, Fernando and Cakir, G{\"u}ltekin and Jacob, Antonio and Lobato, Fabio and Bezbradica, Marija and Helfert, Markus},
+  year={2020},
+  publisher={ScitePress}
+}
+
+@inproceedings{campos2019proposta,
+  title={Proposta de um Dispositivo Nao Invasivo para Monitoramento do Ambiente do Sono},
+  author={Campos, Vitor S and Nascimento, Roberto P and Oliveira, Josu{\'e} AS and Lobato, F{\'a}bio MF and Reis, Josivan R and Junior, Antonio FL Jacob and da Silva, Marcelino S},
+  booktitle={Anais Estendidos do XIX Simp{\'o}sio Brasileiro de Computa{\c{c}}{\~a}o Aplicada {\`a} Sa{\'u}de},
+  pages={19--24},
+  year={2019},
+  organization={SBC}
+}
+
+@inproceedings{oliveira2019dispositivo,
+  title={Dispositivo n{\~a}o invasivo para monitoramento do ambiente do sono},
+  author={Oliveira, Josu{\'e} AS and Campos, Vitor S and Reis, Josivan R and Lobato, F{\'a}bio MF and Nascimento, Roberto P},
+  booktitle={Anais do XIX Simp{\'o}sio Brasileiro de Computa{\c{c}}{\~a}o Aplicada {\`a} Sa{\'u}de},
+  pages={348--353},
+  year={2019},
+  organization={SBC}
+}
+
+@inproceedings{rodrigues2019culpa,
+  title={A culpa {\'e} dela! E isso o que dizem nos coment{\'a}rios das not{\i}cias sobre a tentativa de feminic{\i}dio de Elaine Caparroz},
+  author={Rodrigues, Lucas DF and da Silva Junior, Jorge LF and Lobato, F{\'a}bio MF},
+  booktitle={Anais do VIII Brazilian Workshop on Social Network Analysis and Mining},
+  pages={47--58},
+  year={2019},
+  organization={SBC}
+}
