--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -229,3 +229,45 @@
   year={2019},
   organization={SBC}
 }
+
+@inproceedings{almeida2019reconhecimento,
+  title={Reconhecimento de plantas comest{\i}veis n{\~a}o convencionais: uma an{\'a}lise de m{\'e}todos de classifica{\c{c}}{\~a}o aplicados {\`a} vis{\~a}o computacional},
+  author={Almeida, Gustavo and Soares, Virg{\'\i}lio and Ponte, Marcio and Lobato, Fabio},
+  booktitle={Anais do X Workshop de Computa{\c{c}}{\~a}o Aplicada a Gest{\~a}o do Meio Ambiente e Recursos Naturais},
+  pages={67--76},
+  year={2019},
+  organization={SBC}
+}
+
+@inproceedings{viegas2018grsus,
+  title={GRSUS: Gerenciamento De Recursos De Sa{\'u}de, Um Estudo Sob A {\'O}tica Da Portaria GM/MS 1631/2015 No Estado do Par{\'a}},
+  author={Viegas, Paulo S{\'e}rgio and Caldas, Lucas Vin{\'\i}cius and Jacob, Antonio Fernando and Lobato, F{\'a}bio Manoel},
+  booktitle={15th CONTECSI-International Conference on Information Systems and Technology Management ISSN 2448-1041},
+  year={2018}
+}
+
+@inproceedings{caldas2018development,
+  title={Development of a social network for research support and individual well-being improvement},
+  author={Caldas, Lucas VA and Jacob, Antonio FL and Silva, Simone SC and Pontes, Fernando AR and Lobato, F{\'a}bio MF},
+  booktitle={2018 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
+  pages={383--386},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{lobato2018vamos,
+  title={Vamos falar sobre defici{\^e}ncia? Uma an{\'a}lise dos Tweets sobre este tema no Brasil},
+  author={Lobato, F{\'a}bio Manoel Fran{\c{c}}a and da Silva, Marcelo and Coelho, Krislen and da Costa Silva, Simone and Pontes, Fernando},
+  booktitle={Anais do VII Brazilian Workshop on Social Network Analysis and Mining},
+  year={2018},
+  organization={SBC}
+}
+
+@inproceedings{chagas2018current,
+  title={Current applications of machine learning techniques in CRM: a literature review and practical implications},
+  author={Chagas, Beatriz Nery Rodrigues and Viana, Julio Augusto Nogueira and Reinhold, Olaf and Lobato, Fabio and Jacob, Antonio FL and Alt, Rainer},
+  booktitle={2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI)},
+  pages={452--458},
+  year={2018},
+  organization={IEEE}
+}
