--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -271,3 +271,159 @@
   year={2018},
   organization={IEEE}
 }
+
+@inproceedings{cirqueira2018literature,
+  title={A literature review in preprocessing for sentiment analysis for Brazilian Portuguese social media},
+  author={Cirqueira, Douglas and Pinheiro, M{\'a}rcia Fontes and Jacob, Antonio and Lobato, F{\'a}bio and Santana, Adamo},
+  booktitle={2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI)},
+  pages={746--749},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{barata2018social,
+  title={Social CRM in digital marketing agencies: an extensive classification of services},
+  author={Barata, Gabriela Morgado and Viana, Julio and Reinhold, Olaf and Lobato, Fabio and Alt, Rainer},
+  booktitle={2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI)},
+  pages={750--753},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{Deep,
+   abstract = {<p>Emerging deep learning-based applications in precision medicine include computational histopathological analysis. However, there is a lack of the required training image datasets to generate classification and detection models. This phenomenon occurs mainly due to human factors that make it difficult to obtain well-annotated data. The present study provides a curated public collection of histopathological images (DeepHP) and a convolutional neural network model for diagnosing gastritis. Images from gastric biopsy histopathological exams were used to investigate the performance of the proposed model in detecting gastric mucosa with Helicobacter pylori infection. The DeepHP database comprises 394,926 histopathological images, of which 111 K were labeled as Helicobacter pylori positive and 283 K were Helicobacter pylori negative. We investigated the classification performance of three Convolutional Neural Network architectures. The models were tested and validated with two distinct image sets of 15% (59K patches) chosen randomly. The VGG16 architecture showed the best results with an Area Under the Curve of 0.998%. The results showed that CNN could be used to classify histopathological images from gastric mucosa with marked precision. Our model evidenced high potential and application in the computational pathology field.</p>},
+   author = {Wanderson Gonçalves e Gonçalves and Marcelo Henrique Paula dos Santos and Leonardo Miranda Brito and Helber Gonzales Almeida Palheta and Fábio Manoel França Lobato and Samia Demachki and Ândrea Ribeiro-dos-Santos and Gilderlanio Santana de Araújo},
+   doi = {10.3390/ijms232314581},
+   issn = {1422-0067},
+   issue = {23},
+   journal = {International Journal of Molecular Sciences},
+   keywords = {<i>Helicobacter pylori</i>,computational pathology,deep learning},
+   month = {11},
+   pages = {14581},
+   publisher = {Multidisciplinary Digital Publishing Institute},
+   title = {DeepHP: A New Gastric Mucosa Histopathology Dataset for Helicobacter pylori Infection Diagnosis},
+   volume = {23},
+   url = {https://www.mdpi.com/1422-0067/23/23/14581},
+   year = {2022},
+}
+
+@article{Rodrigues2022,
+author = {Rodrigues, Lucas and Prado, Ana and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a},
+doi = {10.22478/ufpb.2763-9398.2022v16n.61265},
+journal = {Culturas Midi{\'{a}}ticas},
+month = {jun},
+pages = {26},
+title = {{Pandemia de COVID-19 no Brasil: uma an{\'{a}}lise sobre not{\'{i}}cias e coment{\'{a}}rios de usu{\'{a}}rios}},
+url = {https://periodicos.ufpb.br/ojs2/index.php/cm/article/view/61265},
+volume = {16},
+year = {2022}
+}
+
+@article{Nhoatto2021,
+author = {Nhoatto, Fabiano and Justino, Adrielson and de Souza, Efren Lopes and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a},
+journal = {Revista E-Tech: Tecnologias para Competitividade Industrial-ISSN-1983-1838},
+number = {1},
+title = {{PROSPEC{\c{C}}{\~{A}}O DE FERRAMENTAS PARA GEST{\~{A}}O DE PESQUISA E DESENVOLVIMENTO EM INSTITUI{\c{C}}{\~{O}}ES DE CI{\^{E}}NCIA E TECNOLOGIA}},
+volume = {15},
+year = {2021}
+}
+
+@inproceedings{Rodrigues2020,
+author = {Rodrigues, Lucas and Junior, Ademir and Lobato, Fabio},
+booktitle = {Anais do Encontro Nacional de Intelig{\^{e}}ncia Artificial e Computacional (ENIAC 2019)},
+doi = {10.5753/eniac.2019.9336},
+month = {jan},
+pages = {811--822},
+publisher = {Sociedade Brasileira de Computa{\c{c}}{\~{a}}o - SBC},
+title = {{Not{\'{i}}cias relacionadas a pessoas com defici{\^{e}}ncia: uma an{\'{a}}lise do conte{\'{u}}do gerado pelos usu{\'{a}}rios em postagens de m{\'{i}}dias sociais}},
+url = {https://sol.sbc.org.br/index.php/eniac/article/view/9336},
+year = {2020}
+}
+
+@article{Chagas2020,
+author = {Chagas, Beatriz N R and Viana, Julio and Reinhold, Olaf and Lobato, F{\'{a}}bio M F and Jacob, Antonio F L and Alt, Rainer},
+doi = {10.3233/web-200429},
+issn = {24056456},
+journal = {Web Intelligence},
+keywords = {crm,information systems,machine learning},
+number = {1},
+pages = {69--83},
+title = {{A literature review of the current applications of machine learning and their practical implications}},
+volume = {18},
+year = {2020}
+}
+
+@article{Goncalves2020,
+abstract = {Background In recent years, deep learning has gained remarkable attention in medical image analysis due to its capacity to provide results comparable to specialists and, in some cases, surpass them. Despite the emergence of deep learning research on gastric tissues diseases, few intensive reviews are addressing this topic. Method We performed a systematic review related to applications of deep learning in gastric tissue disease analysis by digital histology, endoscopy and radiology images. Conclusions This review highlighted the high potential and shortcomings in deep learning research studies applied to gastric cancer, ulcer, gastritis and non-malignant diseases. Our results demonstrate the effectiveness of gastric tissue analysis by deep learning applications. Moreover, we also identified gaps of evaluation metrics, and image collection availability, therefore, impacting experimental reproducibility.},
+author = {Gon{\c{c}}alves, Wanderson Gon{\c{c}}alves e and dos Santos, Marcelo Henrique de Paula and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a and Ribeiro-dos-Santos, {\^{A}}ndrea and de Ara{\'{u}}jo, Gilderlanio Santana},
+doi = {10.1136/bmjgast-2019-000371},
+file = {::},
+issn = {2054-4774},
+journal = {BMJ Open Gastroenterology},
+month = {mar},
+number = {1},
+pages = {e000371},
+publisher = {BMJ Specialist Journals},
+title = {{Deep learning in gastric tissue diseases: a systematic review}},
+url = {http://bmjopengastro.bmj.com/lookup/doi/10.1136/bmjgast-2019-000371},
+volume = {7},
+year = {2020}
+}
+
+
+@article{de2020analise,
+  title={An{\'a}lise do setor de telecomunica{\c{c}}{\~a}o brasileiro: Uma vis{\~a}o sobre Reclama{\c{c}}{\~o}es},
+  author={de Sousa, Gustavo Nogueira and da Silva Guimar{\~a}es, Isabelle and Viana, Julio Augusto Nogueira and Reinhold, Olaf and Junior, Antonio Fernando Lavareda and Lobato, F{\'a}bio Manoel Fran{\c{c}}a},
+  journal={Revista Ib{\'e}rica de Sistemas e Tecnologias de Informa{\c{c}}{\~a}o},
+  number={37},
+  pages={31--48},
+  year={2020},
+  publisher={Associa{\c{c}}{\~a}o Ib{\'e}rica de Sistemas e Tecnologias de Informacao}
+}
+
+@article{JUNIOR2020,
+author = {J{\'{U}}NIOR, E and MAIA, R and Lobato, F{\'{a}}bio and {Jacob Junior}, Antonio},
+doi = {10.29367/issn.1809-3957.15.2020.176.28},
+journal = {Revista SODEBRAS},
+month = {jun},
+pages = {28--33},
+title = {{UMA SOLU{\c{C}}{\~{A}}O EM FUS{\~{A}}O DE INFORMA{\c{C}}{\~{A}}O PARA GERENCIAMENTO DE RECLAMA{\c{C}}{\~{O}}ES FEITAS NA WEB}},
+volume = {15},
+year = {2020}
+}
+
+@article{Justino2020,
+author = {Justino, Adrielson Ferreira and Ramos, Luciana Fernandes Pastana and de Souza, {\'{E}}fren Lopes and Lobato, Fabio Manoel Fran{\c{c}}a},
+journal = {Journal of Health Informatics},
+number = {4},
+title = {{Rela{\c{c}}{\~{a}}o entre aplicativos geossociais e infec{\c{c}}{\~{o}}es sexualmente transmiss{\'{i}}veis}},
+volume = {12},
+year = {2020}
+}
+
+@inproceedings{Junior2020,
+author = {Junior, Jorge and Rossi, Rafael and Lobato, Fabio},
+booktitle = {Anais do Encontro Nacional de Intelig{\^{e}}ncia Artificial e Computacional (ENIAC 2019)},
+doi = {10.5753/eniac.2019.9348},
+month = {jan},
+pages = {949--960},
+publisher = {Sociedade Brasileira de Computa{\c{c}}{\~{a}}o - SBC},
+title = {{Uma abordagem baseada em letras para a descoberta de conhecimento da m{\'{u}}sica brasileira: o sertanejo como um estudo de caso}},
+url = {https://sol.sbc.org.br/index.php/eniac/article/view/9348},
+year = {2020}
+}
+
+
+@article{NOGUEIRADESOUSA2019,
+author = {{NOGUEIRA DE SOUSA}, GUSTAVO and {DA SILVA GUIMAR{\~{A}}ES}, ISABELLE and {FERNANDO LAVAREDA JACOB JR}, ANTONIO and {MANOEL FRAN{\c{C}}A LOBATO}, F{\'{A}}BIO},
+doi = {10.29367/issn.1809-3957.14.2019.166.18},
+issn = {18093957},
+journal = {Revista SODEBRAS},
+month = {oct},
+number = {166},
+pages = {18--23},
+title = {{GERENCIAMENTO DE PUBLICIDADES NA PLATAFORMA DAS REDES SOCIAIS DE ACORDOCOMCATEGORIAS DE CONTE{\'{U}}DO}},
+url = {http://sodebras.com.br/edicoes/N166.pdf},
+volume = {14},
+year = {2019}
+}
