--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -413,7 +413,6 @@ url = {https://sol.sbc.org.br/index.php/eniac/article/view/9348},
 year = {2020}
 }
 
-
 @article{NOGUEIRADESOUSA2019,
 author = {{NOGUEIRA DE SOUSA}, GUSTAVO and {DA SILVA GUIMAR{\~{A}}ES}, ISABELLE and {FERNANDO LAVAREDA JACOB JR}, ANTONIO and {MANOEL FRAN{\c{C}}A LOBATO}, F{\'{A}}BIO},
 doi = {10.29367/issn.1809-3957.14.2019.166.18},
@@ -425,5 +424,46 @@ pages = {18--23},
 title = {{GERENCIAMENTO DE PUBLICIDADES NA PLATAFORMA DAS REDES SOCIAIS DE ACORDOCOMCATEGORIAS DE CONTE{\'{U}}DO}},
 url = {http://sodebras.com.br/edicoes/N166.pdf},
 volume = {14},
+year = {2019}
+}
+
+@inproceedings{Oliveira2019,
+author = {Oliveira, Josu{\'{e}} A S and Campos, Vitor S and Reis, Josivan R and Lobato, F{\'{a}}bio M F and Nascimento, Roberto P},
+booktitle = {Anais do XIX Simp{\'{o}}sio Brasileiro de Computa{\c{c}}{\~{a}}o Aplicada {\`{a}} Sa{\'{u}}de (SBCAS)},
+doi = {10.5753/sbcas.2019.6274},
+month = {jun},
+pages = {348--353},
+publisher = {Sociedade Brasileira de Computa{\c{c}}{\~{a}}o - SBC},
+title = {{Dispositivo N{\~{a}}o Invasivo para Monitoramento do Ambiente do Sono}},
+url = {https://sol.sbc.org.br/index.php/sbcas/article/view/6274},
+year = {2019}
+}
+
+@article{Rodrigues2019,
+abstract = {Social media plays an essential role for people with disabilities and their family members by providing a channel for denouncement, in addition to inducing support networks. However, hate speech is also found in these media. In this sense, an analysis of social media posts about disability-related news in Brazil is presented in this paper. News media comments were collected and analyzed using topic modeling and sentiment analysis. Moreover, the posts were classified according to its content. The results show that there is a search on the subject, mainly regarding denunciations or for providing mutual support. The findings can guide the formation ofa support network for people with disabilities and their families.},
+author = {Rodrigues, Lucas Darlindo Freitas and Junior, Ademir Bas{\'{e}}gio and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a},
+journal = {Proceedings of the 16th National Meeting on Artificial and Computational Intelligence},
+title = {{Disability-Related News: An Analysis of User-Generated Content on Social Media Posts}},
+year = {2019}
+}
+
+@inproceedings{Campos2019,
+author = {Campos, Vitor S and Nascimento, Roberto P and Oliveira, Josu{\'{e}} A S and Lobato, F{\'{a}}bio M F and Reis, Josivan R and {Jacob Junior}, Antonio F L and {Da Silva}, Marcelino S},
+booktitle = {Anais Es endidos do Simp{\'{o}}sio Brasileiro de Computa{\c{c}}{\~{a}}o Aplicada {\`{a}} Sa{\'{u}}de (SBCAS 2019)},
+doi = {10.5753/sbcas.2019.6278},
+month = {jun},
+pages = {19--24},
+publisher = {Sociedade Brasileira de Computa{\c{c}}{\~{a}}o (SBC)},
+title = {{Proposta de um Dispositivo N{\~{a}}o Invasivo para Monitoramento do Ambiente do Sono}},
+url = {https://sol.sbc.org.br/index.php/sbcas_estendido/article/view/6278},
+year = {2019}
+}
+
+@article{Netto2019,
+author = {Netto, Jos{\'{e}} Santos D'Aquino and de Almeida, Gustavo Rangel Torres and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a and Junior, Antonio Fernando Lavareda Jacob},
+journal = {Revista Eletr{\^{o}}nica de Inicia{\c{c}}{\~{a}}o Cient{\'{i}}fica em Computa{\c{c}}{\~{a}}o},
+number = {4},
+title = {{Melhorando Sistemas de Social CRM por meio de Eletronic Word-of-Mouth}},
+volume = {17},
 year = {2019}
 }
