--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -467,3 +467,126 @@ title = {{Melhorando Sistemas de Social CRM por meio de Eletronic Word-of-Mouth}
 volume = {17},
 year = {2019}
 }
+
+@inproceedings{Cirqueira2017a,
+author = {Cirqueira, Douglas and Vini and Cius, Lucas and Pinheiro, M{\'{a}}rcia and Junior, Ant{\^{o}}nio Jacob and Lobato, F{\'{a}}bio and Santana, {\'{A}}damo},
+booktitle = {Anais Estendidos do XXIII Simp{\'{o}}sio Brasileiro de Sistemas Multim{\'\i}dia e Web},
+pages = {209--213},
+title = {{Opinion Label: A Gamified Crowdsourcing System for Sentiment}},
+year = {2017}
+}
+
+@techreport{Huppes2017,
+address = {Santar{\'{e}}m},
+author = {Huppes, Luan V and Lobato, F{\'{a}}bio M F},
+institution = {Federal University of Western Par{\'{a}}},
+title = {{Social CRM : Estudo do mercado santareno}},
+year = {2017}
+}
+
+@inproceedings{Silva2017,
+author = {Silva, Wendel and Santana, {\'{A}}damo and Lobato, F{\'{a}}bio and Pinheiro, M{\'{a}}rcia},
+booktitle = {Proceedings of the International Conference on Web Intelligence},
+doi = {10.1145/3106426.3117760},
+isbn = {978-1-4503-4951-2},
+keywords = {Twitter,community detection,feature selection,methodology},
+pages = {1006--1009},
+title = {{A Methodology for Community Detection in Twitter}},
+url = {http://doi.acm.org/10.1145/3106426.3117760},
+year = {2017}
+}
+
+@inproceedings{DeAlmeida2017,
+abstract = {The ways of relationship between companies and customers have changed dramatically due to web-users engagement with Online Social Networks, impacting on the way consumers make purchase decisions. As a consequence, this phenomenon brought up a new concept, the Social Customer Relationship Management. In this context, Electronic Word-of-Mouth plays a significant role since customers are more exigent and having easy access to steadily more information about products, services and brands reputation. However, many reputation platforms do not provide an interface for automatic data collection. Thus, these data are not used in business decision making. Aiming to fill these gaps we propose an automatic data retrieval and analysis methods to knowledge extraction from Electronic Word-of-Mouth platforms, providing more reliability to the decision-making processes. The analysis consists in topic modeling using Latent Dirichlet Allocation to identify most frequent complaints and their correlations. Both, the data retrieval method and the analysis method are platform independent. A well-known reputation platform in Brazil was used to evaluate our proposal, the ReclameAqui.},
+author = {de Almeida, Gustavo Rangel Torres and Lobato, Fabio F{\'{a}}bio M F and Cirqueira, Douglas Rocha and Lobato, Fabio F{\'{a}}bio M F},
+booktitle = {XIVWorkshop de Trabalhos de Inicia{\c{c}}{\~{a}}o Cient{\'{i}}fic},
+pages = {107--110},
+title = {{Improving Social CRM through eletronic word-of-mouth: a case study of ReclameAqui}},
+year = {2017}
+}
+
+@article{Lobato2017,
+abstract = {New sequencing technologies such as Illumina/Solexa, SOLiD/ABI, and 454/Roche, revolutionized the biological researches. In this context, the SOLiD platform has a particular sequencing type, known as multiplex run, which enables the sequencing of several samples in a single run. It implies in cost reduction and simplifies the analysis of related samples. Meanwhile, this sequencing type requires an additional filtering step to ensure the reliability of the results. Thus, we propose in this paper a probabilistic model which considers the intrinsic characteristics of each sequencing to characterize multiplex runs and filter low-quality data, increasing the data analysis reliability of multiplex sequencing performed on SOLiD. The results show that the proposed model proves to be satisfactory due to: 1) identification of faults in the sequencing process; 2) adaptation and development of new protocols for sample preparation; 3) the assignment of a degree of confidence to the data generated; and 4) guiding a filtering process, without discarding useful sequences in an arbitrary manner.},
+author = {Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a and Damasceno, Carlos Diego and Leite, Daniela Soares and Ribeiro-dos-Santos, {\^{A}}ndrea Kelly and Darnet, Sylvain and Franc{\^{e}}s, Carlos Renato and Vijaykumar, Nandamudi Lankalapalli and de Santana, {\'{A}}damo Lima and {Fran{\c{c}}a Lobato}, F{\'{a}}bio Manoel and Damasceno, Carlos Diego and {Soares Leite}, Daniela and Ribeiro-dos-Santos, {\^{A}}ndrea Kelly and Darnet, Sylvain and Franc{\^{e}}s, Carlos Renato and {Lankalapalli Vijaykumar}, Nandamudi and de Santana, {\'{A}}damo Lima},
+doi = {10.4236/ajmb.2018.81003},
+issn = {2161-6620},
+journal = {American Journal of Molecular Biology},
+keywords = {Health Informatics,Probabilistic Modeling,SOLiD},
+number = {1},
+pages = {26--38},
+publisher = {Scientific Research Publishing},
+title = {{Data Analysis of Multiplex Sequencing at SOLiD Platform: A Probabilistic Approach to Characterization and Reliability Increase}},
+url = {http://www.scirp.org/journal/doi.aspx?DOI=10.4236/ajmb.2018.81003},
+volume = {8},
+year = {2017}
+}
+
+@incollection{Lobato2017a,
+address = {Cham},
+author = {Lobato, F{\'{a}}bio Manoel Franca and de Resende, Damares Crystina Oliveira and do Nascimento, Roberto Pereira and Siqueira, Andr{\'{e}} Luis Carvalho and Jacob, Antonio Fernando Lavareda and de Santana, {\'{A}}damo Lima},
+booktitle = {Beyond the Internet of Things: Everything Interconnected},
+doi = {10.1007/978-3-319-50758-3_9},
+editor = {Batalla, Jordi Mongay and Mastorakis, George and Mavromoustakis, Constandinos X and Pallis, Evangelos},
+isbn = {978-3-319-50758-3},
+pages = {223--242},
+publisher = {Springer International Publishing},
+title = {{Multimodal Low-Invasive System for Sleep Quality Monitoring and Improvement}},
+url = {http://dx.doi.org/10.1007/978-3-319-50758-3_9},
+year = {2017}
+}
+
+@inproceedings{Cirqueira2017,
+author = {Cirqueira, Douglas and Vin{\'{i}}cius, Lucas and Pinheiro, M{\'{a}}rcia and L., Jacob Jr. Ant{\^{o}}nio F and Lobato, F{\'{a}}bio and Santana, {\'{A}}damo},
+booktitle = {XVI Workshop de Ferramentas e Aplica{\c{c}}{\~{o}}es},
+isbn = {978-85-7669-380-2},
+keywords = {annotation,crowdsourcing,gamification,sentiment analysis,tagging,text,text mining},
+title = {{Opinion Label : A Gamified Crowdsourcing System for Sentiment Analysis Annotation}},
+year = {2017}
+}
+
+@inproceedings{lobato2017social,
+  title={Social crm: Biggest challenges to make it work in the real world},
+  author={Lobato, F{\'a}bio and Pinheiro, M{\'a}rcia and Jacob, Antonio and Reinhold, Olaf and Santana, {\'A}damo},
+  booktitle={Business Information Systems Workshops: BIS 2016 International Workshops, Leipzig, Germany, July 6-8, 2016, Revised Papers 19},
+  pages={221--232},
+  year={2017},
+  organization={Springer}
+}
+
+@inproceedings{Resende2016,
+address = {Vit{\'{o}}ria, ES},
+author = {Resende, Damares C O and Santana, {\'{A}}damo L De and L., Jacob Jr. Ant{\^{o}}nio F and Lobato, F{\'{a}}bio M F},
+booktitle = {Anais do XLVIII SBPO Simp{\'{o}}sio Brasileiro de Pesquisa Operacional},
+title = {{Multivariate time series imputation using genetic programming}},
+year = {2016}
+}
+
+@inproceedings{Cirqueira2016,
+address = {Cham},
+author = {Cirqueira, Douglas and Jacob, Antonio and Lobato, F{\'{a}}bio and de Santana, Adamo Lima and Pinheiro, M{\'{a}}rcia},
+booktitle = {International Conference on Business Information Systems},
+doi = {10.1007/978-3-319-52464-1_22},
+editor = {Abramowicz, Witold and Alt, Rainer and Franczyk, Bogdan},
+isbn = {978-3-319-52464-1},
+pages = {245--251},
+publisher = {Springer International Publishing},
+title = {{Performance evaluation of sentiment analysis methods for Brazilian Portuguese}},
+url = {http://dx.doi.org/10.1007/978-3-319-52464-1_22 http://link.springer.com/10.1007/978-3-319-52464-1_22},
+year = {2016}
+}
+
+@inproceedings{DeResende2016,
+abstract = {Time series have been used in several applications such as process control, environment monitoring, financial analysis and scientific researches. However, in the presence of missing data, this study may become more complex due to a strong break of correlation among samples. Therefore, this work proposes an imputation method for time series using Genetic Programming (GP) and Lagrange Interpolation. The heuristic adopted builds an interpretable regression model that explores time series statistical features such as mean, variance and auto-correlation. It also makes use of interrelation among multivariate time series to estimate missing values. Results show that the proposed method is promising, being capable of imputing data without loosing the dataset's statistical properties, as well as allowing a better understanding of the missing data pattern from the obtained interpretable model.},
+address = {Vit{\'{o}}ria, ES},
+author = {de Resende, Damares C O and de Santana, {\'{A}}damo Lima and Lobato, F{\'{a}}bio Manoel Fran{\c{c}}a Fabio Manoel Franca F{\'{a}}bio M F},
+booktitle = {5th Brazilian Conference on Intelligent Systems},
+doi = {10.1109/BRACIS.2016.30},
+isbn = {9781509035663},
+keywords = {Data imputation,Genetic programming,Lagrange interpolation,Missing data,Time series,data imputation,genetic programming,lagrange interpolation,missing data,time series},
+month = {oct},
+pages = {169--174},
+publisher = {IEEE},
+title = {{Time series imputation using genetic programming and Lagrange interpolation}},
+url = {http://ieeexplore.ieee.org/document/7839581/},
+year = {2016}
+}
