--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,64 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{jacob2024evoimp,
+  title={EvoImp: Multiple Imputation of Multi-label Classification data with a genetic algorithm},
+  author={Jacob Junior, Antonio Fernando Lavareda and do Carmo, Fabricio Almeida and de Santana, Adamo Lima and Santana, Ewaldo Eder Carvalho and Lobato, Fabio Manoel Franca},
+  journal={Plos one},
+  volume={19},
+  number={1},
+  pages={e0297147},
+  year={2024},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{justino2023sciensh,
+  title={SCIENSH: Sistema de apoio {\`a} gest{\~a}o de pesquisa e inova{\c{c}}{\~a}o baseado em cientometria},
+  author={Justino, Adrielson Ferreira and Nhoatto, Fabiano Paulo and de Souza, Efren Lopes and Lobato, F{\'a}bio},
+  journal={iSys-Brazilian Journal of Information Systems},
+  volume={16},
+  number={1},
+  pages={14--1},
+  year={2023}
+}
+
+@inproceedings{menezes2023panorama,
+  title={Panorama do mercado no Social CRM: uma an{\'a}lise dos anuncios de emprego},
+  author={Menezes, Pedro C and Justino, Adrielson F and Barata, Barbara AP and da Silva, Marcelino S and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais da III Escola Regional de Alto Desempenho Norte 2 e III Escola Regional de Aprendizado de M{\'a}quina e Intelig{\^e}ncia Artificial Norte 2},
+  pages={13--16},
+  year={2023},
+  organization={SBC}
+}
+
+
+@inproceedings{menezes2023market,
+  title={Market Overview in Social CRM: An analysis of job advertisements},
+  author={Menezes, Pedro C and Justino, Adrielson F and Barata, Barbara AP and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={2023 IEEE International Conference on Web Intelligence and Intelligent Agent Technology (WI-IAT)},
+  pages={555--562},
+  year={2023},
+  organization={IEEE}
+}
+
+@inproceedings{do2023comparativo,
+  title={Comparativo de Modelagem de T{\'o}picos: um estudo de caso de relatos de publica{\c{c}}{\~o}es predat{\'o}rias},
+  author={do Carmo, Fernando A and da Silva, Marcelino S and Junior, Antonio FL Jacob and Lobato, F{\'a}bio MF},
+  booktitle={Anais da III Escola Regional de Alto Desempenho Norte 2 e III Escola Regional de Aprendizado de M{\'a}quina e Intelig{\^e}ncia Artificial Norte 2},
+  pages={9--12},
+  year={2023},
+  organization={SBC}
+}
+
+@inproceedings{da2023preprocessing,
+  title={Preprocessing Applied to Legal Text Mining: analysis and evaluation of the main techniques used},
+  author={da Silva, Marcos VJ and Santana, Ewaldo E and Lobato, F{\'a}bio MF and Jacob Jr, Antonio FL},
+  booktitle={Anais do XX Encontro Nacional de Intelig{\^e}ncia Artificial e Computacional},
+  pages={1010--1021},
+  year={2023},
+  organization={SBC}
+}
+
 @article{Deep,
    abstract = {<p>Emerging deep learning-based applications in precision medicine include computational histopathological analysis. However, there is a lack of the required training image datasets to generate classification and detection models. This phenomenon occurs mainly due to human factors that make it difficult to obtain well-annotated data. The present study provides a curated public collection of histopathological images (DeepHP) and a convolutional neural network model for diagnosing gastritis. Images from gastric biopsy histopathological exams were used to investigate the performance of the proposed model in detecting gastric mucosa with Helicobacter pylori infection. The DeepHP database comprises 394,926 histopathological images, of which 111 K were labeled as Helicobacter pylori positive and 283 K were Helicobacter pylori negative. We investigated the classification performance of three Convolutional Neural Network architectures. The models were tested and validated with two distinct image sets of 15% (59K patches) chosen randomly. The VGG16 architecture showed the best results with an Area Under the Curve of 0.998%. The results showed that CNN could be used to classify histopathological images from gastric mucosa with marked precision. Our model evidenced high potential and application in the computational pathology field.</p>},
    author = {Wanderson Gonçalves e Gonçalves and Marcelo Henrique Paula dos Santos and Leonardo Miranda Brito and Helber Gonzales Almeida Palheta and Fábio Manoel França Lobato and Samia Demachki and Ândrea Ribeiro-dos-Santos and Gilderlanio Santana de Araújo},
